--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,20 @@ and_CNS
 /simmetrics/lib/commons-codec-1.10-sources.jar
 /simmetrics/lib/simmetrics-core-4.1.1-sources.jar
 /simmetrics/lib/commons-codec-1.10-javadoc.jar
+
+
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
